added heal/damage context menu item.

--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -25,4 +25,5 @@
 <string name="add">Add</string>
 <string name="rounds">Rounds:</string>
 <string name="remove_item">Remove</string>
+<string name="heal_damage">Damage / Heal</string>
 </resources>
