Added ability to edit entities.

--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -41,4 +41,5 @@
 <string name="subdue_unsubdue_by">Subdue/heal subdual by: </string>
 <string name="subdue">Subdue</string>
 <string name="unsubdue">Heal Subdual</string>
+<string name="ok">OK</string>
 </resources>
