--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="hello">Hello World, MainActivity!</string>
+	<string name="hello">There are no entries in the list.  Please add some from the menu below.</string>
 	<string name="app_name">DM Assist</string>
 	<string name="displayAboutBox">About</string>
 	<string name="authorship">by Ron \&quot;Ziroby\&quot; Romero</string>
@@ -42,4 +42,5 @@
 <string name="subdue">Subdue</string>
 <string name="unsubdue">Heal Subdual</string>
 <string name="ok">OK</string>
+<string name="clear_all">Clear All</string>
 </resources>
