Add Sample Data button and additional sample data.

--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="no_entities_in_db">
     There are no creatures or effects saved.
     </string>
+<string name="add_sample_data">Add Sample Data</string>
 </resources>
