Added Entity Types

--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -24,6 +24,7 @@
 <string name="subdual">Subdual:</string>
 <string name="add">Add</string>
 <string name="rounds">Rounds:</string>
+<string name="type">Type:</string>
 <string name="remove_item">Remove</string>
 <string name="delete_item">Delete</string>
 <string name="save_item">Save</string>
