--- a/src/swing/com/ziroby/dmassist/swing/messages.properties
+++ b/src/swing/com/ziroby/dmassist/swing/messages.properties
@@ -11,6 +11,7 @@ AddDialog.promptName=Name:
 AddDialog.promptRounds=Rounds:
 AddDialog.promptsAbbrev=Abbreviation:
 AddDialog.promptSubdual=Subdual:
+AddDialog.promptType=Type:
 AddDialog.windowTitleErrorInData=Error in data
 AddDialog.windowTitleInternalError=Internal Error
 InitOrderFrame.60="
