--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -62,4 +62,6 @@
     </string>
 <string name="add_sample_data">Add Sample Data</string>
 <string name="settings">Settings</string>
+<string name="init_roll_hint">roll value</string>
+<string name="init_dice_hint">modifier</string>
 </resources>
