--- a/src/android/res/values/strings.xml
+++ b/src/android/res/values/strings.xml
@@ -19,7 +19,7 @@
 <string name="help">Help</string>
 <string name="name">Name:</string>
 <string name="init_roll">Initiative Roll:</string>
-<string name="hit_points">Hit Points:</string>
+<string name="hit_points">Hit Points</string>
 <string name="abbrev">Abbreviation:</string>
 <string name="subdual">Subdual:</string>
 <string name="add">Add</string>
@@ -35,8 +35,8 @@
 <string name="display_gpl">GNU Public License... </string>
 <string name="ogl_blurb">DM Assist contains content licesnsed under the Open Game License</string>
 <string name="display_ogl">Open Game License... </string>
-
-<string name="copyright_blurb">Copyright (c) 2009, 2010 Ron &quot;Ziroby&quot; Romero; portions copyright by others</string><string name="display_copyright">Display copyrights... </string>
+<string name="copyright_blurb">Copyright (c) 2009-2011 Ron &quot;Ziroby&quot; Romero; portions copyright by others</string>
+<string name="display_copyright">Display copyrights... </string>
 <string name="subdue_unsubdue">Subdue/Heal Subdual</string>
 <string name="damage">Damage</string>
 <string name="heal">Heal</string>
@@ -64,4 +64,30 @@
 <string name="settings">Settings</string>
 <string name="init_dice_hint">mod</string>
 <string name="init_roll_hint">roll</string>
+<string name="hint_name">name</string>
+<string name="hint_abbrev">abbrev</string>
+<string name="hint_init">init roll</string>
+<string name="init_edit">init</string>
+<string name="hp_edit">hp</string>
+<string name="hint_hit_points">hit points</string>
+<string name="hint_subdual">subdual damage</string>
+<string name="rnds_edit">rnds</string>
+<string name="hint_rounds_left">rounds left</string>
+<string name="labe_type">type </string>
+<string name="label_type">type</string>
+<string name="label_init">init</string>
+<string name="hint_init_roll">init roll</string>
+<string name="hint_hp">hp</string>
+<string name="label_hp">hp</string>
+<string name="hint_hit_dice">hit dice</string>
+<string name="label_sub">sub</string>
+<string name="label_rnds">rnds</string>
+    <string name="hint_init_modifier">init modifier</string>
+    <string name="error_no_entity_types">ERROR: No entity types</string>
+    <string name="label2_init">init:</string>
+    <string name="label2_hp">hp:</string>
+    <string name="label2_subdual">sub:</string>
+    <string name="label2_rounds">rnds:</string>
+    <string name="button_reset">Reset</string>
+    <string name="button_next">Next</string>
 </resources>
